# Vorkers

./: .env.sample  README.md  docker-compose.yml  nginx.conf  pyproject.toml
config/: settings.py  urls.py
worker/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
worker/management/commands/: csu.py
worker/migrations/: 0001_initial.py
